<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishal.datastorage.PreferencesStorage" >
    
    <LinearLayout
        android:id="@+id/BookLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bookNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/bookNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"      
            android:textColor="@color/white"
            android:hint="@string/max_book_char" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/AuthorLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bookAuthorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/bookAuthorEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:ems="10"            
            android:hint="@string/max_book_char" >

        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/PreTextLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/blogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:hint="@string/max_blog_message" >

        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ButtonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal" >

	    <Button
	        android:id="@+id/SaveButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="40dp"
	        android:background="@color/espresso"
	        android:text="@string/save" />

	    <Button
	        android:id="@+id/CancelButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginLeft="80dp"
	        android:background="@color/espresso"
	        android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
