<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishal.datastorage.SqlView" >

    <LinearLayout
        android:id="@+id/SQLTextLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/blogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blog_message"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/blogMessageEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="@color/white"
            android:inputType="textMultiLine"
            android:hint="@string/max_blog_message" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ButtonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal" >

	    <Button
	        android:id="@+id/SaveButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="40dp"
	        android:background="@color/espresso"
	        android:text="@string/save" />

	    <Button
	        android:id="@+id/CancelButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:background="@color/espresso"
	        android:layout_marginLeft="80dp"
	        android:text="@string/cancel" />

    </LinearLayout>
    
</LinearLayout>
