<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishal.datastorage.MainActivity" >
    
    <LinearLayout
        android:id="@+id/ButtonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

	    <Button
	        android:id="@+id/preferencesButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@color/espresso"
	        android:padding="10dp"
	        android:text="@string/preferences" />

	    <Button
	        android:id="@+id/sqliteButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:background="@color/espresso"
	        android:layout_marginLeft="80dp"
	        android:text="@string/sqlite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/TextLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:layout_gravity="left"
        android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/outputTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:maxLines = "10"
			android:scrollbars = "vertical"
			android:textColor="@color/white"
	        android:text="@string/output" />
	    
	</LinearLayout>

    <LinearLayout
        android:id="@+id/CloseLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:background="@color/espresso"
            android:text="@string/close" />

    </LinearLayout>
    
</LinearLayout>
